--- a/game/index.html
+++ b/game/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-    <script src="class.js"></script>
+    <script src="livingCreature.js"></script>
     <script src="script.js"></script>
+    <script src="grass.js"></script>
+    <script src="grassEater.js"></script>
+    <script src="predator.js"></script>
+    <script src="water.js"></script>
+    <script src="gardener.js"></script>
+    <script src="bomb.js"></script>
+    <script src="toxic.js"></script>
+    
 </body>
 </html>
